<resources>
    <string name="app_name">InternetClockControl</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="input_hint">Enter Message</string>
    <string name="send">Send</string>
    <string name="default_hex_string">0000000000000000</string>
    <string name="time">Time</string>
    <string name="time_seconds">Time (Seconds)</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="date">Date</string>
    <string name="clear">Clear</string>
    <string name="cycle">Cycle</string>

</resources>
